--- a/blog-post 10.html
+++ b/blog-post 10.html
@@ -131,7 +131,7 @@
         <h2>播放平台</h2>
 
         <hr>
-        <a href="http://tw.iqiyi.com/v_19rwsf8h7c.html">愛奇藝</a>
+        <a href="https://tw.iqiyi.com/v_19rwsf8h7c.html">愛奇藝</a>
         <a href="https://gimy.tv/ep/33328-1-1.html">Gimy</a>
         <a href="https://ani.gamer.com.tw/animeVideo.php?sn=13842">巴哈姆特</a>
 
@@ -154,7 +154,7 @@
 
         <!-- Single Comment -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人甲</h5>
             讚讚好看
@@ -163,12 +163,12 @@
 
         <!-- Comment with nested comments -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人乙</h5>
             普普其實
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丙</h5>
                 你才普。。。。。。。。
@@ -176,7 +176,7 @@
             </div>
 
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丁</h5>
                 同感
