--- a/blog-post 24.html
+++ b/blog-post 24.html
@@ -152,7 +152,7 @@
 
         <!-- Single Comment -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人甲</h5>
             讚讚好看
@@ -161,12 +161,12 @@
 
         <!-- Comment with nested comments -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人乙</h5>
             普普其實
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丙</h5>
                 你才普。。。。。。。。
@@ -174,7 +174,7 @@
             </div>
 
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丁</h5>
                 同感
@@ -190,7 +190,7 @@
       <div class="col-md-4">
 
         <!-- Search Widget -->
-        <img class="img-fluid rounded" src="http://pic2.iqiyipic.com/image/20190909/7a/18/v_127078642_m_601_m3_260_360.jpg" alt="">
+        <img class="img-fluid rounded" src="https://pic2.iqiyipic.com/image/20190909/7a/18/v_127078642_m_601_m3_260_360.jpg" alt="">
 
         <!-- Categories Widget -->
         <div class="card my-4">
