--- a/region-Western.html
+++ b/region-Western.html
@@ -45,6 +45,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
               <a class="dropdown-item" href="type-comedy.html">搞笑</a>
               <a class="dropdown-item" href="type-passion.html">熱血</a>
+	      <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
