--- a/blog-post 15.html
+++ b/blog-post 15.html
@@ -233,7 +233,7 @@
           <h5 class="card-header">youtube 搶先看</h5>
           <div class="card-body">
             <iframe width="280" height="160" 
-            src="https://www.youtube.com/watch?v=8JUA20VcMLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            src="https://www.youtube.com/embed?v=8JUA20VcMLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
           </div>
         </div>
