--- a/type-passion.html
+++ b/type-passion.html
@@ -108,7 +108,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200924/0c/c9/a_100400736_m_601_m7_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic3.iqiyipic.com/image/20200924/0c/c9/a_100400736_m_601_m7_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
