--- a/type-comedy.html
+++ b/type-comedy.html
@@ -108,7 +108,7 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic2.iqiyipic.com/image/20191003/62/a8/a_100354764_m_601_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic2.iqiyipic.com/image/20191003/62/a8/a_100354764_m_601_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -124,7 +124,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic8.iqiyipic.com/image/20200916/b3/58/a_100165744_m_601_m7_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic8.iqiyipic.com/image/20200916/b3/58/a_100165744_m_601_m7_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -143,7 +143,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic4.iqiyipic.com/image/20200916/9f/9c/a_100398542_m_601_m2_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic4.iqiyipic.com/image/20200916/9f/9c/a_100398542_m_601_m2_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -162,7 +162,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200916/7e/fd/a_100359898_m_601_m3_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic3.iqiyipic.com/image/20200916/7e/fd/a_100359898_m_601_m3_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
